# api-contract/swagger.json
@@ -486,6 +486,37 @@
         }
       }
     },
+    "/api/Customs/declarations/waste": {
+      "post": {
+        "tags": [
+          "Customs"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateWasteDeclarationCommand"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateWasteDeclarationCommand"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateWasteDeclarationCommand"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/Customs/declarations/validate": {
       "post": {
         "tags": [
@@ -4558,6 +4589,42 @@
             "nullable": true
           },
           "tenantId": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "CreateWasteDeclarationCommand": {
+        "type": "object",
+        "properties": {
+          "wasteDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "mrn": {
+            "type": "string",
+            "nullable": true
+          },
+          "quantity": {
+            "type": "number",
+            "format": "double"
+          },
+          "reason": {
+            "type": "string",
+            "nullable": true
+          },
+          "itemId": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          },
+          "batchNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "locationId": {
             "type": "string",
             "format": "uuid",
             "nullable": true
